# smh-playwright-crawl

./: README.md  pyproject.toml
smh-playwright-crawl/: cli.py  crawler.py
smh_playwright_crawl/: cli.py  crawler.py  utils.py
smh_playwright_crawl/config/: playwright_config.py
