[project]
name="smh-playwright-crawl"
version="0.1.2"
description="An async, Playwright-powered web crawler for crawling and scraping web pages with enhanced dedup and filtering."
authors=[{name = "S MUNI HARISH", email="samamuniharish@gmail.com"}]
dependencies=[
    "playwright",
    "beautifulsoup4",
    "tldextract",
]
readme= "README.md"
license={file = "LICENSE" }
keywords = ["fire-crawl","power-crawl","playwright","web-crawler","web-scraper","async-crawler","async-scraper"]

[project.scripts]
smh-playwright-crawl = "smh_playwright_crawl.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"