[project]
name = "smh-playwright-crawl"
version = "0.1.10"
description = "An async, Playwright-powered web crawler for crawling and scraping web pages with enhanced dedup and filtering."
authors = [{name = "S MUNI HARISH", email="samamuniharish@gmail.com"}]
dependencies = [
    "playwright>=1.55.0",
    "beautifulsoup4>=4.14.2",
    "tldextract>=5.3.0",
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["fire-crawl","power-crawl","playwright","web-crawler","web-scraper","async-crawler","async-scraper"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
smh-playwright-crawl = "smh_playwright_crawl.cli:main"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"
